# aisRX_pi

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.bak  COPYING  INSTALL.md  INSTALL.vcxproj  INSTALL.vcxproj.filters  Plugin.cmake  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  aisRX.package.only.bat  aisRX_pi.fbp  aisRX_pi.sln  aisRX_pi.with.displays.fbp  org.opencpn.OpenCPN.Plugin.aisRX.yaml  upload.bat  upload.sh
Resources/bg_BG.lproj/: opencpn-aisRX_pi.mo
Resources/cs_CZ.lproj/: opencpn-aisRX_pi.mo
Resources/el_GR.lproj/: opencpn-aisRX_pi.mo
Resources/et_EE.lproj/: opencpn-aisRX_pi.mo
Resources/hi_IN.lproj/: opencpn-aisRX_pi.mo
Resources/hu_HU.lproj/: opencpn-aisRX_pi.mo
Resources/mr_IN.lproj/: opencpn-aisRX_pi.mo
Resources/nl_NL.lproj/: opencpn-aisRX_pi.mo
Resources/pt_BR.lproj/: opencpn-aisRX_pi.mo
Resources/tr_TR.lproj/: opencpn-aisRX_pi.mo
build-deps/: Rasbats.pub
buildwin/: win_deps.bat
cmake/: TemplateVersion
data/: RIS.db  RIS.sqbpro  ris_search.sql
flatpak/: org.opencpn.OpenCPN.Plugin.aisRX.yaml
include/: config.h
libs/WindowsHeaders/: INSTALL.vcxproj  INSTALL.vcxproj.filters  (+1 more)
libs/wxsqlite/: CMakeLists.txt
src/: AISdisplay.cpp  AISdisplay.h  ASMmessages.cpp  ASMmessages.h  AisMaker.cpp  AisMaker.h  ais.cpp  ais2.h  ais8.cpp  ais8_200.cpp  aisRXOverlayFactory.cpp  aisRXOverlayFactory.h  aisRX_pi.cpp  aisRX_pi.h  aisRXgui.cpp  aisRXgui.h  aisRXgui.h.bak  aisRXgui_impl.cpp  aisRXgui_impl.h  ais_bitset.cpp  ais_bitset2.cpp  icons.cpp  icons.h  signal.cpp  signal.h  widget.cpp  widget.h
(+24 files in other folders)
